--- a/laiqu/src/main/res/values/attrs.xml
+++ b/laiqu/src/main/res/values/attrs.xml
@@ -50,15 +50,25 @@
     </declare-styleable>
 
     <declare-styleable name="NumberButton">
-        <attr name="editable" format="boolean"/>
+        <attr name="editable" format="boolean" />
         <attr name="buttonWidth" format="dimension" />
         <attr name="textWidth" format="dimension" />
-        <attr name="textSize" format="dimension"/>
-        <attr name="textColor" format="color"/>
+        <attr name="textSize" format="dimension" />
+        <attr name="textColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="PileLayout">
-        <attr name="PileLayout_vertivalSpace" format="dimension"/>
-        <attr name="PileLayout_pileWidth" format="dimension"/>
+        <attr name="PileLayout_vertivalSpace" format="dimension" />
+        <attr name="PileLayout_pileWidth" format="dimension" />
+    </declare-styleable>
+    <!--倒计时按钮属性-->
+    <declare-styleable name="TimeViewComm">
+        <attr name="tvc_backgroundColor" format="color" />
+        <attr name="tvc_textColor" format="color" />
+        <attr name="tvc_spaceColor" format="color" />
+        <attr name="tvc_textSize" format="dimension" />
+        <attr name="tvc_radius" format="dimension" />
+        <attr name="tvc_textPaddingHorizantal" format="dimension" />
+        <attr name="tvc_textPaddingVertical" format="dimension" />
     </declare-styleable>
 </resources>
