--- a/laiqu/src/main/res/layout/activity_cancelled_dinner_party_layout.xml
+++ b/laiqu/src/main/res/layout/activity_cancelled_dinner_party_layout.xml
@@ -17,11 +17,10 @@
         app:titleTextAppearance="@style/Toolbar.TitleText">
 
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/wait_pay_dinner_party"
+            android:text="@string/cancelled_dinner_party"
             android:textColor="@android:color/black"
             android:textSize="@dimen/dimen_60px" />
     </android.support.v7.widget.Toolbar>
@@ -33,7 +32,7 @@
 
 
     <com.scu.miomin.shswiperefresh.core.SHSwipeRefreshLayout
-        android:id="@+id/wait_for_pay_swiperefreshLayout"
+        android:id="@+id/cancelled_dinner_party_swiperefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/dinner_party_details_line">
@@ -49,23 +48,24 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_300px">
+                    android:layout_height="@dimen/dimen_300px"
+                    android:background="@color/dinner_party_details_edit_hint_color">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-
+                        android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@mipmap/ic_alarm_clock"
+                            android:drawableLeft="@mipmap/ic_close"
                             android:drawablePadding="@dimen/dimen_10px"
                             android:gravity="center"
-                            android:text="@string/wait_for_pay_time_tips"
-                            android:textColor="@color/textGrayDeep"
+                            android:text="@string/order_cancelled"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/dimen_55px" />
 
                         <LinearLayout
@@ -79,24 +79,26 @@
                             <View
                                 android:layout_width="@dimen/dimen_160px"
                                 android:layout_height="@dimen/dimen_3px"
-                                android:background="@color/textGrayLight"></View>
+                                android:background="@color/textGrayLight"
+                                android:visibility="invisible"></View>
 
-                            <com.qbgg.cenglaicengqu.main.widget.TimeViewComm
+                            <TextView
                                 android:id="@+id/wait_for_pay_timeview"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/dimen_60px"
+                                android:layout_marginLeft="@dimen/dimen_80px"
                                 android:layout_marginRight="@dimen/dimen_60px"
-                                app:tvc_backgroundColor="@color/red_bg"
-                                app:tvc_radius="0dp"
-                                app:tvc_textPaddingHorizantal="@dimen/dimen_20px"
-                                app:tvc_textPaddingVertical="@dimen/dimen_20px"
-                                app:tvc_textSize="@dimen/dimen_60px" />
+                                android:gravity="center"
+                                android:text="@string/trading_closed"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/dimen_55px" />
+
 
                             <View
                                 android:layout_width="@dimen/dimen_160px"
                                 android:layout_height="@dimen/dimen_3px"
-                                android:background="@color/textGrayLight"></View>
+                                android:background="@color/textGrayLight"
+                                android:visibility="invisible"></View>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -171,18 +173,17 @@
                             android:textSize="@dimen/dimen_55px" />
 
                         <TextView
-                            android:id="@+id/wait_for_pay_order"
+                            android:id="@+id/cancelled_dinner_party_canceled"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right|center"
                             android:layout_marginRight="@dimen/dimen_10px"
                             android:background="@drawable/fragment_person_mine_dinner_select"
-                            android:clickable="true"
-                            android:contentDescription="待支付"
+                            android:contentDescription="已取消"
                             android:drawablePadding="@dimen/dimen_10px"
                             android:drawableRight="@mipmap/icon_right_arrows_gray"
                             android:padding="@dimen/dimen_20px"
-                            android:text="@string/wait_pay"
+                            android:text="@string/canceled"
                             android:textColor="@color/red_bg"
                             android:textSize="@dimen/dimen_55px" />
 
@@ -579,113 +580,8 @@
                         android:textColor="@color/dislike_color"
                         android:textSize="@dimen/dimen_55px" />
 
-
                 </RelativeLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_50px"
-                    android:background="@color/wait_for_pay_line_color"></View>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_120px">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left|center"
-                        android:layout_marginLeft="@dimen/dimen_50px"
-                        android:text="@string/purchase_notes"
-                        android:textColor="@color/textGrayDeep"
-                        android:textSize="@dimen/dimen_55px" />
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_200px">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:layout_marginLeft="@dimen/dimen_80px"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/dimen_10px"
-                            android:text="@string/purchase_notes_tips_1"
-                            android:textColor="@color/textGrayLight"
-                            android:textSize="@dimen/dimen_55px" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dimen_10px"
-                            android:text="@string/purchase_notes_tips_2"
-                            android:textColor="@color/textGrayLight"
-                            android:textSize="@dimen/dimen_55px" />
-                    </LinearLayout>
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_30px"
-                    android:background="@color/wait_for_pay_line_color"></View>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_160px"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0px"
-                        android:layout_height="match_parent"
-                        android:layout_weight="7"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/wait_for_pay_total_how_much"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="@dimen/dimen_20px"
-                            android:text="@string/total_how_much"
-                            android:textColor="@color/textGrayLight"
-                            android:textSize="@dimen/dimen_55px" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dimen_30px"
-                            android:text="@string/total"
-                            android:textColor="@color/dinner_recyclerview_attention_color"
-                            android:textSize="@dimen/dimen_55px" />
-
-                        <TextView
-                            android:id="@+id/wait_for_pay_total_meal_ticket"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/total_how_many_pieces"
-                            android:textColor="@color/red_bg"
-                            android:textSize="@dimen/dimen_55px" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/wait_for_pay_now"
-                        android:layout_width="0px"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:background="@drawable/publish_add_nextstep_selector"
-                        android:clickable="true"
-                        android:gravity="center"
-                        android:text="@string/pay_now"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/dimen_55px" />
-                </LinearLayout>
             </LinearLayout>
         </com.scu.miomin.shswiperefresh.view.ShareScrollView>
     </com.scu.miomin.shswiperefresh.core.SHSwipeRefreshLayout>
