--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -42,5 +42,6 @@
     <color name="color_494949">#494949</color>
     <color name="color_7B7B7B">#7B7B7B</color>
     <color name="color_F5F5F5">#F5F5F5</color>
+    <color name="color_595959">#595959</color>
 
 </resources>
