--- a/laiqu/src/main/res/layout/activity_search_dinner_party_layout.xml
+++ b/laiqu/src/main/res/layout/activity_search_dinner_party_layout.xml
@@ -204,6 +204,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_450px"
         android:layout_marginLeft="@dimen/dimen_40px"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -255,7 +256,8 @@
                 android:padding="@dimen/dimen_30px"
                 android:paddingLeft="@dimen/dimen_80px"
                 android:paddingRight="@dimen/dimen_80px"
-                android:text="文化艺术"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:text="名居"
                 android:textColor="@color/textGrayMiddle"
                 android:textSize="@dimen/dimen_50px" />
 
@@ -270,7 +272,7 @@
                 android:padding="@dimen/dimen_30px"
                 android:paddingLeft="@dimen/dimen_80px"
                 android:paddingRight="@dimen/dimen_80px"
-                android:text="金碧辉煌"
+                android:text="楼房"
                 android:textColor="@color/textGrayMiddle"
                 android:textSize="@dimen/dimen_50px" />
 
@@ -285,7 +287,7 @@
                 android:padding="@dimen/dimen_30px"
                 android:paddingLeft="@dimen/dimen_80px"
                 android:paddingRight="@dimen/dimen_80px"
-                android:text="金碧辉煌"
+                android:text="户外阳台"
                 android:textColor="@color/textGrayMiddle"
                 android:textSize="@dimen/dimen_50px" />
 
@@ -294,10 +296,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@id/search_dinner_party_pattern_label_3"
+                android:layout_alignTop="@id/search_dinner_party_pattern_label_5"
                 android:layout_below="@id/search_dinner_party_pattern_label_3"
-                android:layout_marginTop="@dimen/dimen_40px"
-                android:background="@drawable/search_dinner_party_label_shape"></TextView>
+                android:background="@drawable/search_dinner_party_label_shape"
+                android:padding="@dimen/dimen_30px"
+                android:paddingLeft="@dimen/dimen_80px"
+                android:paddingRight="@dimen/dimen_80px"
+                android:text="菜园式"
+                android:textColor="@color/textGrayMiddle"
+                android:textSize="@dimen/dimen_50px"></TextView>
         </RelativeLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="@dimen/dimen_40px"
+        android:text="@string/search"
+        android:textColor="@color/red"
+        android:textSize="@dimen/dimen_55px" />
 
 </LinearLayout>
