第一次提交

--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -43,5 +43,9 @@
     <color name="color_7B7B7B">#7B7B7B</color>
     <color name="color_F5F5F5">#F5F5F5</color>
     <color name="color_595959">#595959</color>
+    <color name="color_CCCCCC">#CCCCCC</color>
+    <color name="color_7A737B">#7A737B</color>
+    <color name="color_BCBCBC">#BCBCBC</color>
+    <color name="color_8a8a8b">#8a8a8b</color>
 
 </resources>
