--- a/laiqu/src/main/res/drawable/nearby_kitchen_like_select.xml
+++ b/laiqu/src/main/res/drawable/nearby_kitchen_like_select.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@mipmap/ic_like_white" android:state_pressed="false"></item>
+    <item android:drawable="@mipmap/ic_like" android:state_selected="true"></item>
+    <item android:drawable="@mipmap/ic_like_white" android:state_selected="false"></item>
     <item android:drawable="@mipmap/ic_like" android:state_pressed="true"></item>
 </selector>
