--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -47,5 +47,11 @@
     <color name="color_7A737B">#7A737B</color>
     <color name="color_BCBCBC">#BCBCBC</color>
     <color name="color_8a8a8b">#8a8a8b</color>
+    <color name="color_E2666A">#E2666A</color>
+    <color name="color_423A59">#423A59</color>
+    <color name="color_F6F6F6">#F6F6F6</color>
+    <color name="color_A6A6A6">#A6A6A6</color>
+    <color name="color_5C5C5C">#5C5C5C</color>
+    <color name="color_ACACAD">#ACACAD</color>
 
 </resources>
