--- a/laiqu/src/main/res/values/styles.xml
+++ b/laiqu/src/main/res/values/styles.xml
@@ -20,8 +20,6 @@
     <color name="color_green_89fbff">#89fbff</color>
 
 
-
-
     <style name="BannerDefaultStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -52,5 +50,16 @@
         <!-- 加载网络数据时覆盖在BGABanner最上层的占位图 -->
         <item name="banner_placeholderDrawable">@mipmap/holder</item>
     </style>
+    <!-- tipsDialog 底部动画 -->
+    <style name="tipsAnimation" parent="android:Animation">
+        <item name="@android:windowEnterAnimation">@anim/dialog_enter</item>
+        <item name="@android:windowExitAnimation">@anim/dialog_exit</item>
+    </style>
 
+    <style name="CustomDatePickerDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 </resources>
