--- a/laiqu/src/main/res/values/attrs.xml
+++ b/laiqu/src/main/res/values/attrs.xml
@@ -73,6 +73,23 @@
     </declare-styleable>
     <declare-styleable name="ClearEditText">
         <!-- 清除按钮的图标 -->
-        <attr name="iconClear" format="reference"/>
+        <attr name="iconClear" format="reference" />
+    </declare-styleable>
+    <!--轮播选择器-->
+    <declare-styleable name="WheelView">
+        <attr name="unitHeight" format="dimension" />
+        <attr name="itemNumber" format="integer" />
+
+        <attr name="normalTextColor" format="color" />
+        <attr name="normalTextSize" format="dimension" />
+        <attr name="selectedTextColor" format="color" />
+        <attr name="selectedTextSize" format="dimension" />
+
+        <attr name="lineColor" format="color" />
+        <attr name="lineHeight" format="dimension" />
+
+        <attr name="maskHeight" format="dimension" />
+        <attr name="noEmpty" format="boolean" />
+        <attr name="isEnable" format="boolean" />
     </declare-styleable>
 </resources>
