--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -53,5 +53,6 @@
     <color name="color_A6A6A6">#A6A6A6</color>
     <color name="color_5C5C5C">#5C5C5C</color>
     <color name="color_ACACAD">#ACACAD</color>
+    <color name="color_D6D6D6">#D6D6D6</color>
 
 </resources>
