--- a/laiqu/src/main/res/layout/birthday_picker_dialog_layout.xml
+++ b/laiqu/src/main/res/layout/birthday_picker_dialog_layout.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/city_picker_cancel"
+                android:id="@+id/time_picker_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -39,7 +39,7 @@
 
 
             <TextView
-                android:id="@+id/city_picker_sure"
+                android:id="@+id/time_picker_sure"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|right"
@@ -56,7 +56,7 @@
         </LinearLayout>
 
         <com.qbgg.cenglaicengqu.main.widget.TimePickerLayout
-            android:id="@+id/city_picker_text"
+            android:id="@+id/time_picker_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
