--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -54,5 +54,16 @@
     <color name="color_5C5C5C">#5C5C5C</color>
     <color name="color_ACACAD">#ACACAD</color>
     <color name="color_D6D6D6">#D6D6D6</color>
+    <color name="trans">#00000000</color>
+    <color name="black">#000000</color>
+    <color name="alertdialog_line">#c6c6c6</color>
+    <color name="actionsheet_blue">#037BFF</color>
+    <color name="actionsheet_red">#FD4A2E</color>
+    <color name="actionsheet_gray">#8F8F8F</color>
+    <color name="color_4499FF">#4499FF</color>
+    <color name="color_F8F8F8">#F8F8F8</color>
+    <color name="color_CFCFCF">#CFCFCF</color>
+    <color name="color_EBEBEB">#EBEBEB</color>
+
 
 </resources>
