--- a/laiqu/src/main/res/layout/activity_personal_data_layout.xml
+++ b/laiqu/src/main/res/layout/activity_personal_data_layout.xml
@@ -29,20 +29,20 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_30px"
+        android:layout_height="@dimen/dimen_50px"
         android:background="@color/wait_for_pay_line_color"></View>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_20px"
+        android:layout_weight="0"
         android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/personal_data_head_portrait"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
+            android:layout_height="@dimen/dimen_170px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
             android:layout_weight="1"
@@ -57,6 +57,7 @@
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/head_portrait"
+            android:textColor="@color/color_black_333333"
             android:textSize="@dimen/dimen_50px" />
 
 
@@ -73,8 +74,8 @@
 
         <com.netease.nim.uikit.common.ui.imageview.CircleImageView
             android:id="@+id/personal_data_head_image"
-            android:layout_width="@dimen/dimen_180px"
-            android:layout_height="@dimen/dimen_180px"
+            android:layout_width="@dimen/dimen_160px"
+            android:layout_height="@dimen/dimen_160px"
             android:layout_above="@+id/personal_data_line_1"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="@dimen/dimen_30px"
@@ -84,7 +85,7 @@
         <TextView
             android:id="@+id/personal_data_nickname"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
+            android:layout_height="@dimen/dimen_170px"
             android:layout_below="@id/personal_data_line_1"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
@@ -100,6 +101,7 @@
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/nick_name"
+            android:textColor="@color/color_black_333333"
             android:textSize="@dimen/dimen_50px" />
 
 
@@ -124,14 +126,14 @@
             android:layout_marginBottom="@dimen/dimen_30px"
             android:layout_marginRight="@dimen/dimen_140px"
             android:text="王大锤"
-            android:textColor="@color/color_A6A6A6"
+            android:textColor="@color/textGrayLight"
             android:textSize="@dimen/dimen_45px" />
 
 
         <TextView
             android:id="@+id/personal_data_sex_text"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
+            android:layout_height="@dimen/dimen_170px"
             android:layout_below="@id/personal_data_line_2"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
@@ -147,6 +149,7 @@
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/sex"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_50px" />
 
 
@@ -171,13 +174,14 @@
             android:layout_marginBottom="@dimen/dimen_30px"
             android:layout_marginRight="@dimen/dimen_140px"
             android:text="男"
-            android:textColor="@color/color_A6A6A6"
+            android:textColor="@color/textGrayDeep"
+
             android:textSize="@dimen/dimen_45px" />
 
         <TextView
             android:id="@+id/personal_data_birthday_text"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
+            android:layout_height="@dimen/dimen_170px"
             android:layout_below="@id/personal_data_line_3"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
@@ -193,6 +197,7 @@
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/birthday"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_50px" />
 
         <TextView
@@ -205,7 +210,7 @@
             android:layout_marginBottom="@dimen/dimen_30px"
             android:layout_marginRight="@dimen/dimen_140px"
             android:text="1991-01-01"
-            android:textColor="@color/color_A6A6A6"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_45px" />
 
         <View
@@ -222,7 +227,7 @@
         <TextView
             android:id="@+id/personal_data_area_text"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
+            android:layout_height="@dimen/dimen_170px"
             android:layout_below="@id/personal_data_line_4"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
@@ -233,12 +238,14 @@
             android:drawablePadding="@dimen/dimen_20px"
             android:drawableRight="@mipmap/ic_right_large_arrows"
             android:gravity="center_vertical"
-            android:paddingBottom="@dimen/dimen_20px"
+            android:layout_marginBottom="@dimen/dimen_20px"
             android:paddingLeft="@dimen/dimen_20px"
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/data_area"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_50px" />
+
         <TextView
             android:id="@+id/personal_data_area"
             android:layout_width="wrap_content"
@@ -249,7 +256,7 @@
             android:layout_marginBottom="@dimen/dimen_30px"
             android:layout_marginRight="@dimen/dimen_140px"
             android:text="广东 东莞"
-            android:textColor="@color/color_A6A6A6"
+            android:textColor="@color/textGrayLight"
             android:textSize="@dimen/dimen_45px" />
 
         <View
@@ -263,17 +270,58 @@
             android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
+
+        <View
+            android:id="@+id/personal_data_line_6"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_50px"
+            android:layout_below="@id/personal_data_area_text"
+            android:background="@color/wait_for_pay_line_color"></View>
+
         <TextView
             android:id="@+id/personal_data_QRCode_text"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_200px"
-            android:layout_below="@id/personal_data_line_5"
+            android:layout_height="@dimen/dimen_170px"
+            android:layout_below="@id/personal_data_line_6"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
             android:layout_weight="1"
             android:background="@drawable/fragment_person_mine_dinner_select"
             android:clickable="true"
-            android:contentDescription="地区"
+            android:contentDescription="二维码名片"
+            android:drawablePadding="@dimen/dimen_20px"
+            android:drawableRight="@mipmap/ic_right_large_arrows"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/dimen_20px"
+            android:paddingLeft="@dimen/dimen_20px"
+            android:paddingRight="@dimen/dimen_20px"
+            android:layout_marginTop="@dimen/dimen_20px"
+            android:text="@string/QRCode_identity"
+            android:textColor="@color/textGrayDeep"
+            android:textSize="@dimen/dimen_50px" />
+
+        <View
+            android:id="@+id/personal_data_line_7"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_3px"
+            android:layout_below="@id/personal_data_QRCode_text"
+            android:layout_marginBottom="@dimen/dimen_10px"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:layout_marginRight="@dimen/dimen_40px"
+            android:layout_marginTop="@dimen/dimen_10px"
+            android:background="@color/wait_for_pay_line_color"></View>
+
+        <TextView
+            android:id="@+id/personal_data_personalized_signature"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_170px"
+            android:layout_below="@id/personal_data_line_7"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:layout_marginRight="@dimen/dimen_40px"
+            android:layout_weight="1"
+            android:background="@drawable/fragment_person_mine_dinner_select"
+            android:clickable="true"
+            android:contentDescription="个性签名"
             android:drawablePadding="@dimen/dimen_20px"
             android:drawableRight="@mipmap/ic_right_large_arrows"
             android:gravity="center_vertical"
@@ -281,18 +329,48 @@
             android:paddingLeft="@dimen/dimen_20px"
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
-            android:text="@string/QRCode_identity"
+            android:text="@string/personalized_signature"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_50px" />
+
         <View
-            android:id="@+id/personal_data_line_6"
+            android:id="@+id/personal_data_line_8"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
-            android:layout_below="@id/personal_data_area_text"
+            android:layout_below="@id/personal_data_personalized_signature"
             android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
             android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
+
+        <TextView
+            android:id="@+id/personal_data_taste_preference"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_170px"
+            android:layout_below="@id/personal_data_line_8"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:layout_marginRight="@dimen/dimen_40px"
+            android:layout_weight="1"
+            android:background="@drawable/fragment_person_mine_dinner_select"
+            android:clickable="true"
+            android:contentDescription="口味偏好"
+            android:drawablePadding="@dimen/dimen_20px"
+            android:drawableRight="@mipmap/ic_right_large_arrows"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/dimen_20px"
+            android:paddingLeft="@dimen/dimen_20px"
+            android:paddingRight="@dimen/dimen_20px"
+            android:paddingTop="@dimen/dimen_20px"
+            android:text="@string/taste_preference"
+            android:textColor="@color/textGrayDeep"
+            android:textSize="@dimen/dimen_50px" />
+
+
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/fragment_person_bg"></View>
 </LinearLayout>
