第一次提交

--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -64,6 +64,7 @@
     <color name="color_F8F8F8">#F8F8F8</color>
     <color name="color_CFCFCF">#CFCFCF</color>
     <color name="color_EBEBEB">#EBEBEB</color>
+    <color name="color_a8a8a8">#a8a8a8</color>
 
 
 </resources>
