--- a/laiqu/src/main/res/layout/activity_personalized_signature_layout.xml
+++ b/laiqu/src/main/res/layout/activity_personalized_signature_layout.xml
@@ -1,13 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_personalized_signature_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.qbgg.cenglaicengqu.personcentre.activities.PersonalizedSignature">
+    android:background="@color/white">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/dimen_80px"
+        android:background="@color/white"
+        android:gravity="right"
+        android:minWidth="?attr/actionBarSize"
+        app:titleTextAppearance="@style/Toolbar.TitleText">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/personalized_signature"
+            android:textColor="@color/color_423A59"
+            android:textSize="@dimen/dimen_60px" />
+
+        <TextView
+            android:id="@+id/personalized_signature_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right"
+            android:layout_marginRight="@dimen/dimen_20px"
+            android:background="@drawable/fragment_person_mine_dinner_select"
+            android:clickable="true"
+            android:padding="@dimen/dimen_20px"
+            android:text="@string/submit"
+            android:textColor="@color/color_423A59"
+            android:textSize="@dimen/dimen_60px" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/fragment_person_bg"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_400px"
+            android:layout_marginTop="@dimen/dimen_80px"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/fragment_person_edit_signature"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:hint="@string/fragment_person_edit_signature_tips"
+                android:textColorHint="@color/textGrayLight"
+                android:textColor="@color/textGrayDeep"
+                android:layout_marginTop="@dimen/dimen_80px"
+                android:maxLength="15"
+                android:background="@null" />
+
+            <TextView
+                android:id="@+id/fragment_person_edit_signature_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="@dimen/dimen_40px"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:layout_weight="0"
+                android:text="0/15"
+                android:textColor="@color/dinner_recyclerview_attention_color"
+                android:textSize="@dimen/dimen_50px" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
