--- a/laiqu/src/main/res/layout/activity_personal_data_layout.xml
+++ b/laiqu/src/main/res/layout/activity_personal_data_layout.xml
@@ -369,6 +369,7 @@
     </RelativeLayout>
 
     <View
+        android:layout_marginTop="@dimen/dimen_20px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/fragment_person_bg"></View>
