第一次提交

--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -65,6 +65,8 @@
     <color name="color_CFCFCF">#CFCFCF</color>
     <color name="color_EBEBEB">#EBEBEB</color>
     <color name="color_a8a8a8">#a8a8a8</color>
+    <color name="color_F1F1F1">#F1F1F1</color>
+    <color name="color_F0F0F0">#F0F0F0</color>
 
 
 </resources>
