--- a/laiqu/src/main/res/layout/activity_personal_account_safe_layout.xml
+++ b/laiqu/src/main/res/layout/activity_personal_account_safe_layout.xml
@@ -102,7 +102,6 @@
                 android:layout_marginBottom="@dimen/dimen_10px"
                 android:layout_marginLeft="@dimen/dimen_40px"
                 android:layout_marginRight="@dimen/dimen_40px"
-                android:layout_marginTop="@dimen/dimen_10px"
                 android:layout_weight="1"
                 android:background="@drawable/fragment_person_mine_dinner_select"
                 android:clickable="true"
@@ -139,6 +138,158 @@
             android:text="@string/social_contact_accounts_bound"
             android:textColor="@color/textGrayLight"
             android:textSize="@dimen/dimen_50px" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_40px"
+            android:background="@color/white"
+            android:paddingBottom="@dimen/dimen_40px">
+
+            <com.netease.nim.uikit.common.ui.imageview.CircleImageView
+                android:id="@+id/personal_account_safe_WeChat"
+                android:layout_width="@dimen/dimen_200px"
+                android:layout_height="@dimen/dimen_200px"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginTop="@dimen/dimen_40px"
+                android:src="@mipmap/ic_wechat_bound" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_200px"
+                android:layout_above="@+id/personal_account_safe_line"
+                android:layout_marginLeft="@dimen/dimen_20px"
+                android:layout_toRightOf="@id/personal_account_safe_WeChat"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/dimen_100px"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/personal_account_safe_WeChat_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginBottom="@dimen/dimen_30px"
+                        android:text="@string/wechat"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_50px" />
+
+                    <TextView
+                        android:id="@+id/personal_account_safe_WeChat_nicename"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginTop="@dimen/dimen_10px"
+                        android:paddingBottom="@dimen/dimen_30px"
+                        android:text="王大锤"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_40px" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/personal_account_safe_WeChat_bound_state"
+                    android:layout_width="@dimen/dimen_280px"
+                    android:layout_height="@dimen/dimen_100px"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_80px"
+                    android:background="@drawable/personal_account_safe_select"
+                    android:contentDescription="微信 绑定状态"
+                    android:drawableLeft="@mipmap/ic_bound"
+                    android:drawablePadding="@dimen/dimen_20px"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/dimen_40px"
+                    android:text="@string/is_binding"
+                    android:textColor="@color/textGrayLight"
+                    android:textSize="@dimen/dimen_50px" />
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/personal_account_safe_line"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_10px"
+                android:layout_below="@id/personal_account_safe_WeChat"
+                android:layout_marginTop="@dimen/dimen_40px"
+                android:background="@color/color_F1F1F1"></View>
+
+            <com.netease.nim.uikit.common.ui.imageview.CircleImageView
+                android:id="@+id/personal_account_safe_QQ"
+                android:layout_width="@dimen/dimen_200px"
+                android:layout_height="@dimen/dimen_200px"
+                android:layout_below="@id/personal_account_safe_line"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginTop="@dimen/dimen_40px"
+                android:src="@mipmap/ic_qq_no_bound" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_200px"
+                android:layout_above="@id/personal_account_safe_line"
+                android:layout_alignBottom="@id/personal_account_safe_QQ"
+                android:layout_marginLeft="@dimen/dimen_20px"
+                android:layout_toRightOf="@id/personal_account_safe_QQ"
+
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/personal_account_safe_QQ_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginBottom="@dimen/dimen_30px"
+                        android:text="@string/qq_name"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_50px" />
+
+                    <TextView
+                        android:id="@+id/personal_account_safe_QQ_nicename"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/personal_account_safe_QQ_text"
+                        android:layout_gravity="left"
+                        android:layout_marginTop="@dimen/dimen_10px"
+                        android:paddingBottom="@dimen/dimen_30px"
+                        android:text="王大锤"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_40px" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/personal_account_safe_QQ_bound_state"
+                    android:layout_width="@dimen/dimen_280px"
+                    android:layout_height="@dimen/dimen_100px"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_80px"
+                    android:background="@drawable/personal_account_safe_select"
+                    android:contentDescription="QQ绑定状态"
+                    android:drawableLeft="@mipmap/ic_plus"
+                    android:drawablePadding="@dimen/dimen_20px"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/dimen_40px"
+                    android:text="@string/binding"
+                    android:textColor="@color/red_bg"
+                    android:textSize="@dimen/dimen_50px" />
+            </RelativeLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </RelativeLayout>
