--- a/laiqu/src/main/res/layout/activity_seting_layout.xml
+++ b/laiqu/src/main/res/layout/activity_seting_layout.xml
@@ -60,12 +60,12 @@
             android:textSize="@dimen/dimen_50px" />
 
         <View
-            android:layout_marginTop="@dimen/dimen_10px"
-            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
+            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
         <TextView
@@ -79,7 +79,6 @@
             android:clickable="true"
             android:contentDescription="账户安全"
             android:drawablePadding="@dimen/dimen_20px"
-            android:textColor="@color/textGrayDeep"
             android:drawableRight="@mipmap/ic_right_large_arrows"
             android:gravity="center_vertical"
             android:paddingBottom="@dimen/dimen_20px"
@@ -87,46 +86,63 @@
             android:paddingRight="@dimen/dimen_20px"
             android:paddingTop="@dimen/dimen_20px"
             android:text="@string/account_safe"
+            android:textColor="@color/textGrayDeep"
             android:textSize="@dimen/dimen_50px" />
 
         <View
-            android:layout_marginTop="@dimen/dimen_10px"
-            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
+            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
 
-        <TextView
-            android:id="@+id/seting_person_meal_privacy"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_120px"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:layout_marginRight="@dimen/dimen_40px"
-            android:layout_weight="1"
-            android:background="@drawable/fragment_person_mine_dinner_select"
-            android:clickable="true"
-            android:contentDescription="饭友隐私"
-            android:drawablePadding="@dimen/dimen_20px"
-            android:drawableRight="@mipmap/ic_right_large_arrows"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/dimen_20px"
-            android:paddingLeft="@dimen/dimen_20px"
-            android:paddingRight="@dimen/dimen_20px"
-            android:paddingTop="@dimen/dimen_20px"
-            android:text="@string/meal_privacy"
-            android:textSize="@dimen/dimen_50px" />
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/seting_person_real_name_authentication"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_120px"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_marginRight="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:background="@drawable/fragment_person_mine_dinner_select"
+                android:clickable="true"
+                android:contentDescription="实名认证"
+                android:drawablePadding="@dimen/dimen_20px"
+                android:drawableRight="@mipmap/ic_right_large_arrows"
+                android:gravity="center_vertical"
+                android:paddingBottom="@dimen/dimen_20px"
+                android:paddingLeft="@dimen/dimen_20px"
+                android:paddingRight="@dimen/dimen_20px"
+                android:paddingTop="@dimen/dimen_20px"
+                android:text="@string/real_name_authentication"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_50px" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dimen_150px"
+                android:text="未认证"
+                android:textColor="@color/red_bg"
+                android:textSize="@dimen/dimen_40px" />
+        </RelativeLayout>
 
         <View
-            android:layout_marginTop="@dimen/dimen_10px"
-            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
+            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
         <TextView
@@ -151,12 +167,12 @@
 
 
         <View
-            android:layout_marginTop="@dimen/dimen_10px"
-            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
+            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
         <TextView
@@ -181,12 +197,12 @@
 
 
         <View
-            android:layout_marginTop="@dimen/dimen_10px"
-            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_3px"
+            android:layout_marginBottom="@dimen/dimen_10px"
             android:layout_marginLeft="@dimen/dimen_60px"
             android:layout_marginRight="@dimen/dimen_60px"
+            android:layout_marginTop="@dimen/dimen_10px"
             android:background="@color/wait_for_pay_line_color"></View>
 
 
@@ -194,9 +210,9 @@
             android:id="@+id/seting_person_about_app"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_120px"
+            android:layout_marginBottom="@dimen/dimen_20px"
             android:layout_marginLeft="@dimen/dimen_40px"
             android:layout_marginRight="@dimen/dimen_40px"
-            android:layout_marginBottom="@dimen/dimen_20px"
             android:layout_weight="1"
             android:background="@drawable/fragment_person_mine_dinner_select"
             android:clickable="true"
@@ -212,8 +228,8 @@
             android:textSize="@dimen/dimen_50px" />
 
 
-
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
