--- a/laiqu/src/main/res/values/colors.xml
+++ b/laiqu/src/main/res/values/colors.xml
@@ -67,6 +67,8 @@
     <color name="color_a8a8a8">#a8a8a8</color>
     <color name="color_F1F1F1">#F1F1F1</color>
     <color name="color_F0F0F0">#F0F0F0</color>
+    <color name="color_EDEDED">#EDEDED</color>
+    <color name="color_FF7117">#FF7117</color>
 
 
 </resources>
