--- a/laiqu/src/main/res/layout/activity_bound_change_phone_number_layout.xml
+++ b/laiqu/src/main/res/layout/activity_bound_change_phone_number_layout.xml
@@ -60,6 +60,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_height="@dimen/dimen_180px">
 
                 <android.support.v7.widget.AppCompatEditText
