--- a/laiqu/src/main/res/layout/fragment_no_certification_layout.xml
+++ b/laiqu/src/main/res/layout/fragment_no_certification_layout.xml
@@ -3,18 +3,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/fragment_person_bg"
     android:orientation="vertical">
 
-    <com.qbgg.cenglaicengqu.main.widget.ExpendStepView
-        android:id="@+id/certification_stepview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_360px"
-        app:StepCurrFlag="0"
-        app:StepMaxFlag="3"
-        app:StepNormalBackground="@mipmap/ic_stepview_unfinished"
-        app:StepSelectedBackground="@mipmap/ic_stepview_finish"
-        app:StepTextNormalColor="@color/textGrayLight"
-        app:StepTextTransferColor="@color/color_FF7117"
-        app:StepTitleArray="填写审核信息|审核中|认证成功" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.qbgg.cenglaicengqu.main.widget.ExpendStepView
+            android:id="@+id/certification_stepview"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_360px"
+            app:StepCompletedBackground="@mipmap/ic_stepview_finish"
+            app:StepCurrFlag="0"
+            app:StepMaxFlag="3"
+            app:StepNormalBackground="@mipmap/ic_stepview_unfinished"
+            app:StepSelectedBackground="@mipmap/ic_stepview_finish"
+            app:StepTextNormalColor="@color/textGrayLight"
+            app:StepTextTransferColor="@color/color_FF7117"
+            app:StepTitleArray="填写审核信息|审核中|认证成功" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:text="@string/no_certification_tips"
+            android:textColor="@color/textGrayDeep"
+            android:textSize="@dimen/dimen_45px" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_400px"
+            android:layout_marginTop="@dimen/dimen_40px"
+            android:background="@color/white"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/certification_real_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="@string/real_name"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="10"
+                android:maxLines="1"
+                android:paddingRight="@dimen/dimen_23px"
+                android:textColor="@color/textGrayDeep"
+                android:textColorHint="@color/textGrayLight"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:textSize="@dimen/dimen_54px" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_3px"
+                android:background="@color/publish_line_color"></View>
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/certification_identity_card"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="@string/identity_card"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="10"
+                android:maxLines="1"
+                android:paddingRight="@dimen/dimen_23px"
+                android:textColor="@color/textGrayDeep"
+                android:textColorHint="@color/textGrayLight"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:textSize="@dimen/dimen_54px" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
